--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Ez az első HTML fájlom... :)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kollázsom</title>
+</head>
+<body>
+    <h1>Az én első kollázsom.</h1>
+    <img src="img/Eszter kollazs.jpg" alt="">
+    
+</body>
+</html>
