--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kollázsom</title>
+    <title>Kollázs</title>
 </head>
 <body>
-    <h1>Az én első kollázsom.</h1>
-    <img src="img/Eszter kollazs.jpg" alt="">
+    <h1>Első kollázsom.</h1>
+    <img src="img/Flora kollazs.jpg"> 
 </body>
 </html>
