--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kollázs</title>
+<title>Flóra oldala</title>
 </head>
 <body>
-    <h1>Első kollázsom.</h1>
-    <img src="img/Flora kollazs.jpg"> 
+
+<h1>Szabó Flóra</h1>
+<h2>Szabó Flóra</h2>
+<h3>Szabó Flóra</h3>
+<h4>Szabó Flóra</h4>
+<h5>Szabó Flóra</h5>
+
+<p>A kollázs képem:</p>
+<img src="https://i.imgur.com/XA5SCV1.jpeg" alt="Ezen a képen látható az én kollázsom" width=500>
 </body>
 </html>
