--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <h3>Szabó Flóra</h3>
 <h4>Szabó Flóra</h4>
 <h5>Szabó Flóra</h5>
+  
+  <a href="https://flora06.github.io/kollazs/keplink.html" target="blank">Képlink</a>
 
 <p>A kollázs képem:</p>
 <img src="https://i.imgur.com/XA5SCV1.jpeg" alt="Ezen a képen látható az én kollázsom" width=500>
