--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <title>Flóra oldala</title>
 </head>
-<body>
+<body style="background-color: darksalmon;">
 
-<h1>Szabó Flóra</h1>
-<h2>Szabó Flóra</h2>
-<h3>Szabó Flóra</h3>
-<h4>Szabó Flóra</h4>
-<h5>Szabó Flóra</h5>
+<h1 style="color: midnightblue;">Szabó Flóra</h1>
+<h2 style="color: mediumvioletred;">Szabó Flóra</h2>
+<h3 style="color: palevioletred;">Szabó Flóra</h3>
+<h4 style="color: steelblue;">Szabó Flóra</h4>
+<h5 style="color: darkcyan;">Szabó Flóra</h5>
   
   <a href="https://flora06.github.io/kollazs/keplink.html" target="blank">Képlink</a>
 
