--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 <h4 style="color: steelblue;">Szabó Flóra</h4>
 <h5 style="color: darkcyan;">Szabó Flóra</h5>
   
-  <a href="https://flora06.github.io/kollazs/keplink.html" target="blank">Képlink</a>
+ <p>1.feladat
+ <a href="https://flora06.github.io/kollazs/keplink.html" target="blank">Képlink</a>
+ </p>
+ <p>2.feladat
   <a href="https://flora06.github.io/listak/" target="blank">Listák</a>
+ </p>
 
 <p>A kollázs képem:</p>
 <img src="https://i.imgur.com/XA5SCV1.jpeg" alt="Ezen a képen látható az én kollázsom" width=500>
