--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
  <p>2.feladat
  <a href="https://flora06.github.io/listak/" target="blank">Listák</a>
  </p>
+ <p>3.feladat
+ <a href="https://flora06.github.io/orarend/" target="blank">Órarend</a>
+ </p>
 
 <p>A kollázs képem:</p>
 <img src="https://i.imgur.com/XA5SCV1.jpeg" alt="Ezen a képen látható az én kollázsom" width=500>
