--- a/listak.html
+++ b/listak.html
@@ -14,6 +14,7 @@
     <li style="color: deeppink;">Programozás</li>
     <li style="color: deeppink;">Irodalom</li>
 </ol>
+<p style="color:indigo">Kedvenc szabadidős tevékenységeim:</p>
 <ul>
     <li style="color:royalblue">Rajzolás</li>
     <li style="color:royalblue">Olvasás</li>
