--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
 </head>
 <body style="background-color: darksalmon;">
 
+<nav>
+<a href="https://flora06.github.io/kollazs/" style="text-decoration: none; color: greenyellow; "><b>Kollázs</b></a>|
+<b>1.feladat</b>
+        <a href="https://flora06.github.io/kollazs/keplink.html" style="text-decoration: none; color: greenyellow;"><b>Képlink</b></a>|
+
+<b>2.feladat</b>
+        <a href="https://flora06.github.io/listak/" style="text-decoration: none; color: greenyellow;"><b>Listák</b></a>|
+
+<b>3.feladat</b>
+        <a href="https://flora06.github.io/orarend/" style="text-decoration: none; color: greenyellow;"><b>Órarend</b></a>|
+
+</nav>
+
 <h1 style="color: midnightblue;">Szabó Flóra</h1>
 <h2 style="color: mediumvioletred;">Szabó Flóra</h2>
 <h3 style="color: palevioletred;">Szabó Flóra</h3>
 <h4 style="color: steelblue;">Szabó Flóra</h4>
 <h5 style="color: darkcyan;">Szabó Flóra</h5>
   
- <p>1.feladat
- <a href="https://flora06.github.io/kollazs/keplink.html" target="blank">Képlink</a>
- </p>
- <p>2.feladat
- <a href="https://flora06.github.io/listak/" target="blank">Listák</a>
- </p>
- <p>3.feladat
- <a href="https://flora06.github.io/orarend/" target="blank">Órarend</a>
- </p>
+ 
 
 <p>A kollázs képem:</p>
 <img src="https://i.imgur.com/XA5SCV1.jpeg" alt="Ezen a képen látható az én kollázsom" width=500>
