--- a/keplink.html
+++ b/keplink.html
@@ -3,7 +3,7 @@
 <head>
 <title>Képlink</title>
 </head>
-<body>
+<body style="background-color: darksalmon;">
         <nav>
                 <a href="https://flora06.github.io/kollazs/" style="text-decoration: none; color: greenyellow; "><b>Kollázs</b></a>|
                 <b>1.feladat</b>
