--- a/listak.html
+++ b/listak.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listák</title>
 </head>
-<body>
+<body style="background-color: darksalmon;">
     <nav>
         <a href="https://flora06.github.io/kollazs/" style="text-decoration: none; color: greenyellow; "><b>Kollázs</b></a>|
         <b>1.feladat</b>
@@ -18,13 +18,13 @@
                 <a href="https://flora06.github.io/orarend/" style="text-decoration: none; color: greenyellow;"><b>Órarend</b></a>|
         
         </nav>
-    <h1 style="color:goldenrod">Szabó Flóra</h1>
-    <h2 style="color: darkred;">Listák</h2>
+    <h1 style="color:darkred">Szabó Flóra</h1>
+    <h2 style="color: darkgreen;">Listák</h2>
     <p style="color:indigo">Kedvenc tantárgyaim:</p>
 <ol>
-    <li style="color: deeppink;">IKT</li>
-    <li style="color: deeppink;">Programozás</li>
-    <li style="color: deeppink;">Irodalom</li>
+    <li style="color:darkslateblue;">IKT</li>
+    <li style="color:darkslateblue;">Programozás</li>
+    <li style="color:darkslateblue;">Irodalom</li>
 </ol>
 <p style="color:indigo">Kedvenc szabadidős tevékenységeim:</p>
 <ul>
@@ -34,3 +34,4 @@
 </ul>
 </body>
 </html>
+
