--- a/listak.html
+++ b/listak.html
@@ -22,9 +22,9 @@
     <h2 style="color: darkgreen;">Listák</h2>
     <p style="color:indigo">Kedvenc tantárgyaim:</p>
 <ol>
-    <li style="color:darkslateblue;">IKT</li>
-    <li style="color:darkslateblue;">Programozás</li>
-    <li style="color:darkslateblue;">Irodalom</li>
+    <li style="color:royalblue">IKT</li>
+    <li style="color:royalblue">Programozás</li>
+    <li style="color:royalblue">Irodalom</li>
 </ol>
 <p style="color:indigo">Kedvenc szabadidős tevékenységeim:</p>
 <ul>
