--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background-color: darksalmon;">
 
 <nav>
-<a href="https://flora06.github.io/kollazs/" style="text-decoration: none; color: greenyellow; "><b>Kollázs</b></a>|
+<a href="https://flora06.github.io/kollazs/" style="text-decoration: none; color: red; "><b>Kollázs</b></a>|
 <b>1.feladat</b>
         <a href="https://flora06.github.io/kollazs/keplink.html" style="text-decoration: none; color: greenyellow;"><b>Képlink</b></a>|
 
