--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
  
 
 <p>A kollázs képem:</p>
-<img src="https://i.imgur.com/XA5SCV1.jpeg" alt="Ezen a képen látható az én kollázsom" width=500>
+<img src="https://github.com/Flora06/kep/blob/main/kollazs.jpg.jpg?raw=true" alt="Ezen a képen látható az én kollázsom" width=500>
 </div>
 </body>
 </html>
