--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <title>Flóra oldala</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
 <style>
     body {
       margin: 0;
@@ -10,6 +13,7 @@
     }
     
     .sidebar {
+      font-family: 'Mochiy Pop P One', sans-serif;
       margin: 0;
       padding: 0;
       width: 200px;
