--- a/keplink.html
+++ b/keplink.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Képlink</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
 <style>
     body {
       margin: 0;
@@ -9,6 +12,7 @@
     }
     
     .sidebar {
+      font-family: 'Mochiy Pop P One', sans-serif;
       margin: 0;
       padding: 0;
       width: 200px;
