--- a/keplink.html
+++ b/keplink.html
@@ -5,6 +5,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Old+Standard+TT&display=swap" rel="stylesheet">
 <style>
     body {
       margin: 0;
@@ -40,6 +43,8 @@
     }
     
     div.content {
+      font-family: 'Mochiy Pop P One', sans-serif;
+font-family: 'Old Standard TT', serif;
       margin-left: 200px;
       padding: 1px 16px;
       height: 1000px;
