--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ font-family: 'Old Standard TT', serif;
     <div class="sidebar">
         <a class="active" href="https://flora06.github.io/kollazs/">Kollázs</a>
         <a href="https://flora06.github.io/kollazs/keplink.html">Képlink</a>
-        <a href="https://flora06.github.io/listak/">Listák</a>
-        <a href="https://flora06.github.io/orarend/">Órarend</a>
+        <a href="https://flora06.github.io/kollazs/listak.html">Listák</a>
+        <a href="https://flora06.github.io/kollazs/orarend.html">Órarend</a>
       </div>
 
 <div class="content">
