--- a/keplink.html
+++ b/keplink.html
@@ -91,8 +91,8 @@ font-family: 'Old Standard TT', serif;
 <div class="sidebar">
         <a href="https://flora06.github.io/kollazs/">Kollázs</a>
 <a class="active" href="https://flora06.github.io/kollazs/keplink.html">Képlink</a>
-        <a href="https://flora06.github.io/listak/">Listák</a>
-        <a href="https://flora06.github.io/orarend/">Órarend</a>
+        <a href="https://flora06.github.io/kollazs/listak.html">Listák</a>
+        <a href="https://flora06.github.io/kollazs/orarend.html">Órarend</a>
 </div>
 <div class="content">
 <h1>Szabó Flóra</h1>
