--- a/listak.html
+++ b/listak.html
@@ -93,8 +93,8 @@ font-family: 'Old Standard TT', serif;
 <div class="sidebar">
         <a href="https://flora06.github.io/kollazs/">Kollázs</a>
         <a href="https://flora06.github.io/kollazs/keplink.html">Képlink</a>
-<a class="active" href="https://flora06.github.io/listak/">Listák</a>
-        <a href="https://flora06.github.io/orarend/">Órarend</a>
+<a class="active" href="https://flora06.github.io/kollazs/listak.html">Listák</a>
+        <a href="https://flora06.github.io/kollazs/orarend.html">Órarend</a>
       </div>
 
 <div class="content">
