--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
  
 
 <p>A kollázs képem:</p>
-<img src="https://github.com/Flora06/kep/blob/main/kollazs.jpg.jpg?raw=true" alt="Ezen a képen látható az én kollázsom" width=500>
+<img class="kollazs" src="https://github.com/Flora06/kep/blob/main/kollazs.jpg.jpg?raw=true" alt="Ezen a képen látható az én kollázsom">
 </div>
 </body>
 </html>
