--- a/keplink.html
+++ b/keplink.html
@@ -43,7 +43,7 @@
 
 <a href="https://www.mcdonalds.hu/" target="blank">
 
-<img src="https://www.arkadpecs.hu/fileadmin/user_upload/GLOBAL/brand_stores/logos/mcdonaldshu.jpg" alt="MEKI" title="Meki" width=250>
+<img class="meki" src="https://www.arkadpecs.hu/fileadmin/user_upload/GLOBAL/brand_stores/logos/mcdonaldshu.jpg" alt="MEKI" title="Meki">
 
 </a>
 </div>
