--- a/urlap.html
+++ b/urlap.html
@@ -46,6 +46,7 @@
     <fieldset>
         <legend><h2>Vevő adatai</h2></legend>
         <p><label>Név <input type="text" name="nev"></label></p>
+        <p><label>Lakcím <input type="text" name="lakcim"></label></p>
         <p><label>Email <input type='email' name="email"></label></p>
         <p><label>Telefon <input type="tel" name="telefon" size="10"></label></p>
     </fieldset>
