--- a/urlap.html
+++ b/urlap.html
@@ -45,7 +45,7 @@
       </div>
     <div class="content">
     <form>
-    <h1>Anime Poszterek</h1>
+    <h1 class="AnimeP">Anime Poszterek</h1>
     <fieldset>
         <legend><h2>Vevő adatai</h2></legend>
         <p><label>Név <input type="text" name="nev"></label></p>
