--- a/pita.html
+++ b/pita.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-        <p style="border: 1px solid black; width: 175px; height: 20px; border-radius: 5px; color: red; " id="eredmeny"> C értéke:</p>
-
+    <p style="border: 1px solid black; width: 175px; height: 20px; border-radius: 5px; color: red; " id="eredmeny"></p>
     <img src="https://www.nkp.hu/tankonyv/matematika_9//img/Szaki09_matek/FI_511010902_szakiskola_9_NKP-116b.png?max_width=2048"
         alt=""><br>
     <fieldset style="width:fit-content;" >
