--- a/pita.html
+++ b/pita.html
@@ -5,12 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pita</title>
-</head>
+    <title>Pitagorasz</title>
+  
+<link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Old+Standard+TT&display=swap" rel="stylesheet">
 
+<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="manifest" href="favicon/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+    
+</head>
 <body>
-    <p style="border: 1px solid black; width: 175px; height: 20px; border-radius: 5px; color: red; " id="eredmeny"></p>
-    <img src="https://www.nkp.hu/tankonyv/matematika_9//img/Szaki09_matek/FI_511010902_szakiskola_9_NKP-116b.png?max_width=2048"
+    <div class="sidebar">
+        <a class="active" href="https://flora06.github.io/kollazs/">Kollázs</a>
+        <a href="https://flora06.github.io/kollazs/keplink.html">Képlink</a>
+        <a href="https://flora06.github.io/kollazs/listak.html">Listák</a>
+        <a href="https://flora06.github.io/kollazs/orarend.html">Órarend</a>
+        <a href="https://flora06.github.io/kollazs/urlap.html">Űrlap</a>
+      </div>
+  
+  <div class="content">
+  <p style="border: 1px solid black; width: 175px; height: 20px; border-radius: 5px; color: red; " id="eredmeny"> C értéke:</p>
+  <img src="https://www.nkp.hu/tankonyv/matematika_9//img/Szaki09_matek/FI_511010902_szakiskola_9_NKP-116b.png?max_width=2048"
         alt=""><br>
     <fieldset style="width:fit-content;" >
         <legend>Pitagorasz</legend>
@@ -26,6 +61,5 @@
             document.getElementById("eredmeny").innerHTML = c
         }
     </script>
-</body>
-
-</html>
+  </div>
+  </html>
