--- a/index.html
+++ b/index.html
@@ -51,5 +51,10 @@
 <p>A kollázs képem:</p>
 <img class="kollazs" src="https://github.com/Flora06/kep/blob/main/kollazs.jpg.jpg?raw=true" alt="Ezen a képen látható az én kollázsom">
 </div>
+    
+<footer>
+<p>Copyright Szabó Flóra<br>
+</footer>
+    
 </body>
 </html>
