--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 <p>A kollázs képem:</p>
 <img class="kollazs" src="https://github.com/Flora06/kep/blob/main/kollazs.jpg.jpg?raw=true" alt="Ezen a képen látható az én kollázsom">
 </div>
+    
+<div class="footer">Copyright Szabó Flóra</div>
      
 </body>
 </html>
