--- a/gomb.html
+++ b/gomb.html
@@ -45,5 +45,6 @@
     <button onclick="document.getElementById('kor').src='img/háromszög.png'"><img class="gomb" src="img/háromszög.png"></button><br>
     <img id="kor" src="img/kör.png">
 </div>
+<div class="footer">Copyright Szabó Flóra</div>
 </body>
 </html>
