--- a/orarend.html
+++ b/orarend.html
@@ -115,7 +115,8 @@
         <td>&nbsp;</td>
         <td>Digitális kultúra</td>
     </tr>
-</div>
+</div>    
 </table>
+<div class="footer">Copyright Szabó Flóra</div>
 </body>
 </html>
