--- a/regisztralas.html
+++ b/regisztralas.html
@@ -60,15 +60,16 @@
                 if (pass1 == pass2) {
                     alert("Regisztrálva: " + user)
                 }
-                else { alert("nem egyezik") }
+                else { alert("Nem egyezik") }
             }
             else {
-                alert("rossz")
+                alert("Rossz")
             }
         }
 
     </script>
     </div>
+    <div class="footer">Copyright Szabó Flóra</div>
 </body>
 
 </html>
