--- a/egerek.html
+++ b/egerek.html
@@ -50,10 +50,10 @@
         <td>ASUS ROG Gladius II Origin</td>
     </tr>
     <tr>
-        <td><img src="img/egér1.png" alt=""></td>
-        <td><img src="img/egér2.png" alt=""></td>
-        <td><img src="img/egér3.png" alt=""></td>
-        <td><img src="img/egér4.png" alt=""></td>
+        <td><img class="eger" src="https://flora06.github.io/kollazs/img/eg%C3%A9r1.png" alt=""></td>
+        <td><img class="eger" src="https://flora06.github.io/kollazs/img/eg%C3%A9r2.png" alt=""></td>
+        <td><img class="eger" src="https://img.kasa.cz/k-foto/800/1/9/5/product_4733591.jpg" alt=""></td>
+        <td><img class="eger" src="https://flora06.github.io/kollazs/img/eg%C3%A9r4.png" alt=""></td>
     </tr>
     <tr>
         <td>Csatlakozási mód-Vezetékes <br>
