--- a/kosar.html
+++ b/kosar.html
@@ -7,15 +7,58 @@
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js"></script>
     <title>Kosár</title>
+    <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Old+Standard+TT&display=swap" rel="stylesheet">
+
+<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="manifest" href="favicon/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <button onclick="kosarba('cipo01')"><img src="https://cdn.geogebra.org/resource/UJOJqi5L/XGQ1mNLKQCEaqfwe/material-UJOJqi5L.png" id="Cipo01"><p>Cipő 1</p></button>
-    <button onclick="kosarba('cipo02')"><img src="https://www.femcafe.hu/sites/default/files/images2017/4_lifestyle/pilli_123.jpg" id="Cipo02"><p>Cipő 2</p></button>
-    <button onclick="kosarba('cipo03')"><img src="https://s13emagst.akamaized.net/products/39628/39627630/images/res_252bdeba866a39c696a85968c49fe841.jpg" id="Cipo03"><p>Cipő 3</p></button><br>
+    <div class="sidebar">
+        <a href="https://flora06.github.io/kollazs/">Kollázs</a>
+        <a href="https://flora06.github.io/kollazs/keplink.html">Képlink</a>
+        <a href="https://flora06.github.io/kollazs/listak.html">Listák</a>
+        <a href="https://flora06.github.io/kollazs/orarend.html">Órarend</a>
+        <a href="https://flora06.github.io/kollazs/">Űrlap</a>
+        <a href="https://flora06.github.io/kollazs/evszakok.html"></a>
+        <a href="https://flora06.github.io/kollazs/pita.html"></a>
+        <a href="https://flora06.github.io/kollazs/gomb.html"></a>
+        <a href="https://flora06.github.io/kollazs/regisztralas.html"></a>
+        <a href="https://flora06.github.io/kollazs/egerek.html"></a>
+        <a href="https://flora06.github.io/kollazs/kosar.html"></a>
+      </div>
+      <div class="content">
+
+    <button onclick="kosarba('cipo01')"><img src="https://static.supersklep.hu/1277482-tornacipk-converse-chuck-70-hi-black-black-egret.jpg?w=1920" id="Cipo01"><p>Cipő 1</p></button>
+    <button onclick="kosarba('cipo02')"><img src="https://static.supersklep.hu/1245532-converse-chuck-70-hi-tornacipk-light-purple.jpg?w=960" id="Cipo02"><p>Cipő 2</p></button>
+    <button onclick="kosarba('cipo03')"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQs3iFOApvAwaYFdOz-kMNzuWOQT0y9iZ_KOMpn_2SIWW7TcXrzRX_s3uGGKNxrutu2qdk&usqp=CAU" id="Cipo03"><p>Cipő 3</p></button><br>
 
     <button onclick="torles()">Törlés</button><br>
     <button onclick="kosar()">Kosár</button>
 
     <table border="2px" id="table"></table>
+</div>
+    
+<div class="footer">Copyright Szabó Flóra</div>
 </body>
 </html>
