--- a/keplink.html
+++ b/keplink.html
@@ -36,6 +36,12 @@
         <a href="https://flora06.github.io/kollazs/listak.html">Listák</a>
         <a href="https://flora06.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://flora06.github.io/kollazs/urlap.html">Űrlap</a>
+        <a href="https://flora06.github.io/kollazs/evszakok.html"></a>
+        <a href="https://flora06.github.io/kollazs/pita.html"></a>
+        <a href="https://flora06.github.io/kollazs/gomb.html"></a>
+        <a href="https://flora06.github.io/kollazs/regisztralas.html"></a>
+        <a href="https://flora06.github.io/kollazs/egerek.html"></a>
+        <a href="https://flora06.github.io/kollazs/kosar.html"></a>
 </div>
 <div class="content">
 <h1>Szabó Flóra</h1>
