--- a/orarend.html
+++ b/orarend.html
@@ -39,6 +39,12 @@
         <a href="https://flora06.github.io/kollazs/listak.html">Listák</a>
         <a class="active" href="https://flora06.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://flora06.github.io/kollazs/urlap.html">Űrlap</a>
+        <a href="https://flora06.github.io/kollazs/evszakok.html"></a>
+        <a href="https://flora06.github.io/kollazs/pita.html"></a>
+        <a href="https://flora06.github.io/kollazs/gomb.html"></a>
+        <a href="https://flora06.github.io/kollazs/regisztralas.html"></a>
+        <a href="https://flora06.github.io/kollazs/egerek.html"></a>
+        <a href="https://flora06.github.io/kollazs/kosar.html"></a>
       </div>
 
 <div class="content">
