--- a/evszakok.html
+++ b/evszakok.html
@@ -25,7 +25,12 @@
         <a href="https://flora06.github.io/kollazs/keplink.html">Képlink</a>
         <a href="https://flora06.github.io/listak/">Listák</a>
         <a href="https://flora06.github.io/orarend/">Órarend</a>
-        <a class="active" href="https://flora06.github.io/evszakok/">Évszakok</a>
+        <a class="active" href="https://flora06.github.io/kollazs/evszakok.html">Évszakok</a>
+        <a href="https://flora06.github.io/kollazs/pita.html"></a>
+        <a href="https://flora06.github.io/kollazs/gomb.html"></a>
+        <a href="https://flora06.github.io/kollazs/regisztralas.html"></a>
+        <a href="https://flora06.github.io/kollazs/egerek.html"></a>
+        <a href="https://flora06.github.io/kollazs/kosar.html"></a>
       </div>
     <div class="content">
     <h1>Évszakok</h1>
