--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         <a href="https://flora06.github.io/kollazs/listak.html">Listák</a>
         <a href="https://flora06.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://flora06.github.io/kollazs/urlap.html">Űrlap</a>
-        <a href="https://flora06.github.io/kollazs/evszakok.html"></a>
-        <a href="https://flora06.github.io/kollazs/pita.html"></a>
-        <a href="https://flora06.github.io/kollazs/gomb.html"></a>
-        <a href="https://flora06.github.io/kollazs/regisztralas.html"></a>
-        <a href="https://flora06.github.io/kollazs/egerek.html"></a>
-        <a href="https://flora06.github.io/kollazs/kosar.html"></a>
+        <a href="https://flora06.github.io/kollazs/evszakok.html">Évszakok</a>
+        <a href="https://flora06.github.io/kollazs/pita.html">Pitagorasz</a>
+        <a href="https://flora06.github.io/kollazs/gomb.html">Gomb</a>
+        <a href="https://flora06.github.io/kollazs/regisztralas.html">Regisztrálás</a>
+        <a href="https://flora06.github.io/kollazs/egerek.html">webShop</a>
+        <a href="https://flora06.github.io/kollazs/kosar.html">Kosár</a>
       </div>
     
 <div class="content">
