--- a/listak.html
+++ b/listak.html
@@ -43,7 +43,7 @@
         <a href="https://flora06.github.io/kollazs/pita.html">Pitagorasz</a>
         <a href="https://flora06.github.io/kollazs/gomb.html">Gomb</a>
         <a href="https://flora06.github.io/kollazs/regisztralas.html">Regisztrálás</a>
-        <a href="https://flora06.github.io/kollazs/egerek.html">webShop</a>
+        <a href="https://flora06.github.io/kollazs/egerek.html">WebShop</a>
         <a href="https://flora06.github.io/kollazs/kosar.html">Kosár</a>
       </div>
 
