--- a/evszakok.html
+++ b/evszakok.html
@@ -52,6 +52,6 @@
             <p>Tél</p>
         </div>
     </div>
-    </div>
+    <div class="footer">Copyright Szabó Flóra</div>
 </body>
 </html>
