--- a/pita.html
+++ b/pita.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <a class="active" href="https://flora06.github.io/kollazs/">Kollázs</a>
+        <a href="https://flora06.github.io/kollazs/">Kollázs</a>
         <a href="https://flora06.github.io/kollazs/keplink.html">Képlink</a>
         <a href="https://flora06.github.io/kollazs/listak.html">Listák</a>
         <a href="https://flora06.github.io/kollazs/orarend.html">Órarend</a>
