--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <h4 style="color: steelblue;">Szabó Flóra</h4>
 <h5 style="color: darkcyan;">Szabó Flóra</h5>
 <p>A kollázs képem:</p>
-<img class="kollazs" src="Kollazs.jpg" alt="Ezen a képen látható az én kollázsom">
+<img class="kollazs" src="kep.jpg" alt="Ezen a képen látható az én kollázsom">
 </div>    
 <div class="footer">Copyright Szabó Flóra</div>
 </body>
